frontend/tests/cases/negative/levelContractionWrongSpec.gr
-- Should fail because Private + Public = Public

foo : Int [Private] -> Int
foo [x] = weak x + (bar [x])
        -- x :Private Int   x :Public Int

-- A way to get a variable graded as Public above
bar : Int [Public] -> Int
bar [x] = x
