frontend/tests/cases/negative/levelContractionWrongSpec.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/levelContractionWrongSpec.gr:4:1:
Private value cannot be moved to level Public